# Curves3D

./: .gitignore
Curves3D_lib/src/: CMakeLists.txt  curvesobject_3d_Base.cpp  curvesobject_3d_Base.h  curvesobject_3d_Circle.cpp  curvesobject_3d_Circle.h  curvesobject_3d_Ellipse.cpp  curvesobject_3d_Ellipse.h  curvesobject_3d_Helixe.cpp  curvesobject_3d_Helixe.h  point_3d.cpp  point_3d.h
Curves3D_main/src/: CMakeLists.txt  main.cpp
